Upgrade 7.1.11 version to 53092

--- a/7.1.11.53092.html
+++ b/7.1.11.53092.html
@@ -34,16 +34,16 @@
                     <ul>
                         <li>
                             <details>
-                                <summary>7.1.11.53086</summary>
+                                <summary>7.1.11.53092</summary>
                                 <ul>
-                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.11.53086-arm64.dmg">macOS arm64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.11.53086-x86_64.dmg">macOS x86_64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11.53086-Debian.deb">Debian 12.8</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11.53086-Ubuntu.deb">Ubuntu 24.04.1</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11.53086-Tumbleweed.rpm">openSUSE Tumbleweed</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11.53086-Fedora.rpm">Fedora 41</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11-53086-x86_64.pkg.tar.zst">Arch</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11.53086-FreeBSD.pkg">FreeBSD 14.2</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.11.53092-arm64.dmg">macOS arm64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.11.53092-x86_64.dmg">macOS x86_64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11.53092-Debian.deb">Debian 12.8</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11.53092-Ubuntu.deb">Ubuntu 24.04.1</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11.53092-Tumbleweed.rpm">openSUSE Tumbleweed</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11.53092-Fedora.rpm">Fedora 41</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11-53092-x86_64.pkg.tar.zst">Arch</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11.53092-FreeBSD.pkg">FreeBSD 14.2</a></li>
                                 </ul>
                             </details>
                         </li>
@@ -59,7 +59,7 @@
                     </ul>
                     <h2>Changelogs</h2>
                     <ul>
-                        <li><a id="7.1.11.53086" href="7.1.11.53086.html">7.1.11.53086</a></li>
+                        <li><a id="7.1.11.53092" href="7.1.11.53092.html">7.1.11.53092</a></li>
                     </ul>
                 </div>
             </div>
@@ -96,7 +96,7 @@
                 });
         </script>
         <div id="canvas" style="text-align: center;">
-            <h2>Changelog (1st of December 2024)</h2>
+            <h2>Changelog (19th of December 2024)</h2>
             <p><a href="https://releasenotes.secondlife.com/viewer/7.1.11.12363455226.html" target="_blank">Parity to ExtraFPS 7.1.11</a></p>
             <p><a href="https://megapahit.com/show_bug.cgi?id=5" target="_blank">Dictionaries for spell checker</a></p>
             <p><a href="https://megapahit.com/show_bug.cgi?id=45" target="_blank">Favourite attachments/button/wearables</a></p>
@@ -107,7 +107,7 @@
             <p><a href="https://megapahit.com/show_bug.cgi?id=95" target="_blank">Gestures on any key</a></p>
             <p><a href="https://megapahit.com/show_bug.cgi?id=102" target="_blank">Option to zoom-in by double clicking</a></p>
             <p><a href="https://megapahit.com/show_bug.cgi?id=107" target="_blank">Attachments refresh</a></p>
-            <p><a href="https://megapahit.net/downloads/megapahit-7.1.11-53086-x86_64.pkg.tar.zst">New port: Arch Linux</a></p>
+            <p><a href="https://megapahit.net/downloads/megapahit-7.1.11-53092-x86_64.pkg.tar.zst">New port: Arch Linux</a></p>
         </div>
         <script type="text/javascript" src="js/emscripten.js"></script>
         <script async type="text/javascript" src="js/myron.js"></script>
