--- a/index.html
+++ b/index.html
@@ -34,15 +34,16 @@
                     <ul>
                         <li>
                             <details>
-                                <summary>7.1.10.52662</summary>
+                                <summary>7.1.11.53092</summary>
                                 <ul>
-                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.10.52662-arm64.dmg">macOS arm64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.10.52662-x86_64.dmg">macOS x86_64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.10.52662-Debian.deb">Debian 12.7</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.10.52662-Ubuntu.deb">Ubuntu 24.04.1</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.10.52662-Tumbleweed.rpm">openSUSE Tumbleweed</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.10.52662-Fedora.rpm">Fedora 40</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.10.52662-FreeBSD.pkg">FreeBSD 14.1</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.11.53092-arm64.dmg">macOS arm64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.11.53092-x86_64.dmg">macOS x86_64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11.53092-Debian.deb">Debian 12.8</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11.53092-Ubuntu.deb">Ubuntu 24.04.1</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11.53092-Tumbleweed.rpm">openSUSE Tumbleweed</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11.53092-Fedora.rpm">Fedora 41</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11-53092-x86_64.pkg.tar.zst">Arch</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.11.53092-FreeBSD.pkg">FreeBSD 14.2</a></li>
                                 </ul>
                             </details>
                         </li>
@@ -58,7 +59,7 @@
                     </ul>
                     <h2>Changelogs</h2>
                     <ul>
-                        <li><a id="7.1.10.52662" href="7.1.10.52662.html">7.1.10.52662</a></li>
+                        <li><a id="7.1.11.53092" href="7.1.11.53092.html">7.1.11.53092</a></li>
                     </ul>
                 </div>
             </div>
