--- a/7.1.11.53092.html
+++ b/7.1.11.53092.html
@@ -34,7 +34,7 @@
                     <ul>
                         <li>
                             <details>
-                                <summary>7.1.11.53092</summary>
+                                <summary>7.1.11.53092 - Default</summary>
                                 <ul>
                                     <li><a href="https://megapahit.net/downloads/Megapahit-7.1.11.53092-arm64.dmg">macOS arm64</a></li>
                                     <li><a href="https://megapahit.net/downloads/Megapahit-7.1.11.53092-x86_64.dmg">macOS x86_64</a></li>
@@ -49,6 +49,21 @@
                         </li>
                         <li>
                             <details>
+                                <summary>7.1.12.53172 - ForeverFPS</summary>
+                                <ul>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.12.53172-arm64.dmg">macOS arm64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.12.53172-x86_64.dmg">macOS x86_64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.12.53172-Debian.deb">Debian 12.9</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.12.53172-Ubuntu.deb">Ubuntu 24.04.1</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.12.53172-Tumbleweed.rpm">openSUSE Tumbleweed</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.12.53172-Fedora.rpm">Fedora 41</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.12-53172-x86_64.pkg.tar.zst">Arch</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.12.53172-FreeBSD.pkg">FreeBSD 14.2</a></li>
+                                </ul>
+                            </details>
+                        </li>
+                       <li>
+                            <details>
                                 <summary>Source Code</summary>
                                 <ul>
                                     <li><a href="https://megapahit.org" target="_blank">Self-hosted</a></li>
@@ -59,7 +74,8 @@
                     </ul>
                     <h2>Changelogs</h2>
                     <ul>
-                        <li><a id="7.1.11.53092" href="7.1.11.53092.html">7.1.11.53092</a></li>
+                        <li><a id="7.1.11.53092" href="7.1.11.53092.html">7.1.11.53092 - Default</a></li>
+                        <li><a id="7.1.12.53172" href="7.1.12.53172.html">7.1.12.53172 - ForeverFPS</a></li>
                     </ul>
                 </div>
             </div>
