--- a/7.1.12.53172.html
+++ b/7.1.12.53172.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-        <title>Megapahit</title>
+        <title>Megapahit Changelog</title>
         <link rel="shortcut icon" href="files/favicon.ico"/>
         <link rel="stylesheet" href="css/main.css">
     </head>
@@ -19,9 +19,9 @@
                 <div id="content">
                     <h2>Disclosures</h2>
                     <ul>
-                        <li><a id="disclaimers" href="#disclaimers">Disclaimers</a></li>
-                        <li><a id="limitations" href="#limitations">Limitations</a></li>
-                        <li><a id="policies" href="#policies">Policies</a></li>
+                        <li><a id="disclaimers" href="https://megapahit.net/#disclaimers">Disclaimers</a></li>
+                        <li><a id="limitations" href="https://megapahit.net/#limitations">Limitations</a></li>
+                        <li><a id="policies" href="https://megapahit.net/#policies">Policies</a></li>
                     </ul>
                     <h2>Support</h2>
                     <ul>
@@ -111,7 +111,13 @@
                         [3, 'Policies']);
                 });
         </script>
-        <canvas id="canvas" oncontextmenu="event.preventDefault()" tabindex=-1></canvas>
+        <div id="canvas" style="text-align: center;">
+            <h2>Changelog (16th of February 2025)</h2>
+            <p><a href="https://releasenotes.secondlife.com/viewer/7.1.12.12999043440.html" target="_blank">Parity to ForeverFPS 7.1.12</a></p>
+            <p><a href="https://megapahit.com/show_bug.cgi?id=9" target="_blank">Group chat blocker</a></p>
+            <p>Linkage to Boost 1.87 on Tumbleweed, Arch and FreeBSD</p>
+            <p>New contrast skin</p>
+        </div>
         <script type="text/javascript" src="js/emscripten.js"></script>
         <script async type="text/javascript" src="js/myron.js"></script>
     </body>
