Complete ForeverFPS 7.1.12.53172 change log
before moving on to 7.1.12.53252's.

--- a/7.1.12.53172.html
+++ b/7.1.12.53172.html
@@ -115,8 +115,12 @@
             <h2>Changelog (16th of February 2025)</h2>
             <p><a href="https://releasenotes.secondlife.com/viewer/7.1.12.12999043440.html" target="_blank">Parity to ForeverFPS 7.1.12</a></p>
             <p><a href="https://megapahit.com/show_bug.cgi?id=9" target="_blank">Group chat blocker</a></p>
+            <p>libminizip1 dependency fix on Debian and Ubuntu</p>
+            <p>OpenAL(-soft) upgrade from 1.24.1 to 1.24.2 on macOS</p>
+            <p>FMOD upgrade from 2.02.26 to 2.02.27 on distros that use it</p>
             <p>Linkage to Boost 1.87 on Tumbleweed, Arch and FreeBSD</p>
             <p>New contrast skin</p>
+            <p>Smaller camera floater</p>
         </div>
         <script type="text/javascript" src="js/emscripten.js"></script>
         <script async type="text/javascript" src="js/myron.js"></script>
