--- a/7.1.13.53431.html
+++ b/7.1.13.53431.html
@@ -55,6 +55,7 @@
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53431-Debian.deb">Debian 12.10</a></li>
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53431-Fedora.rpm">Fedora 41</a></li>
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53431-FreeBSD.pkg">FreeBSD 14.2</a></li>
+                                    <li><a href="https://megapahit.net/gentoo/games-rpg/megapahit/megapahit-7.1.13-r53431-1.gpkg.tar">Gentoo</a></li>
                                     <li><a href="https://megapahit.net/downloads/Megapahit-7.1.13.53431-arm64.dmg">macOS arm64</a></li>
                                     <li><a href="https://megapahit.net/downloads/Megapahit-7.1.13.53431-x86_64.dmg">macOS x86_64</a></li>
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53431-Tumbleweed.rpm">openSUSE Tumbleweed</a></li>
@@ -115,6 +116,7 @@
             <h2>Changelog (3rd of April 2025)</h2>
             <p><a href="https://releasenotes.secondlife.com/viewer/7.1.13.14174767759.html" target="_blank">Parity with 2025.03 7.1.13</a></p>
             <p>Shadow options</p>
+            <p><a href="https://megapahit.net/gentoo/games-rpg/megapahit/megapahit-7.1.13-r53431-1.gpkg.tar" target="_blank">New port: Gentoo</a></p>
         </div>
         <script type="text/javascript" src="js/emscripten.js"></script>
         <script async type="text/javascript" src="js/myron.js"></script>
