Sneak in Fedora 42 build to 7.1.13.53452
and replace x86_64 separators with dashes.

--- a/7.1.13.53452.html
+++ b/7.1.13.53452.html
@@ -38,11 +38,11 @@
                                 <ul>
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.1.13-53452-x86_64.pkg.tar.zst">Arch</a></li>
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53452-Debian.deb">Debian 12.10</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53452-Fedora.rpm">Fedora 41</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53452-Fedora.rpm">Fedora 42</a></li>
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53452-FreeBSD.pkg">FreeBSD 14.2</a></li>
                                     <li><a href="https://megapahit.net/gentoo/games-rpg/megapahit/megapahit-7.1.13-r53452-1.gpkg.tar">Gentoo</a></li>
                                     <li><a href="https://megapahit.net/downloads/Megapahit-7.1.13.53452-arm64.dmg">macOS arm64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.13.53452-x86_64.dmg">macOS x86_64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.13.53452-x86_64.dmg">macOS x86-64</a></li>
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53452-Tumbleweed.rpm">openSUSE Tumbleweed</a></li>
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53452-Ubuntu.deb">Ubuntu 24.04.2</a></li>
                                 </ul>
@@ -104,6 +104,7 @@
             <p>FMOD upgrade from 2.02.27 to 2.02.28 on distros that use it</p>
             <p><a href="https://feedback.secondlife.com/bug-reports/p/fxaa-smaa-severe-performance-issue-mac-m2" target="_blank">Antialiasing slowing down on macOS fix</a></p>
             <p><a href="https://feedback.secondlife.com/bug-reports/p/202503-viewer-shows-dark-pbr-objects-macbook-m4-pro" target="_blank">Low presets making things dark on macOS fix</a></p>
+            <p>Fedora package built on 42</p>
         </div>
         <script type="text/javascript" src="js/emscripten.js"></script>
         <script async type="text/javascript" src="js/myron.js"></script>
