--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                                 <ul>
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.1.13-53452-x86_64.pkg.tar.zst">Arch</a></li>
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53452-Debian.deb">Debian 12.10</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53452-Fedora.rpm">Fedora 41</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53452-Fedora.rpm">Fedora 42</a></li>
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53452-FreeBSD.pkg">FreeBSD 14.2</a></li>
                                     <li><a href="https://megapahit.net/gentoo/games-rpg/megapahit/megapahit-7.1.13-r53452-1.gpkg.tar">Gentoo</a></li>
                                     <li><a href="https://megapahit.net/downloads/Megapahit-7.1.13.53452-arm64.dmg">macOS arm64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.13.53452-x86_64.dmg">macOS x86_64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.13.53452-x86_64.dmg">macOS x86-64</a></li>
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53452-Tumbleweed.rpm">openSUSE Tumbleweed</a></li>
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53452-Ubuntu.deb">Ubuntu 24.04.2</a></li>
                                 </ul>
