Add Fedora in Wayland session to the changelog

--- a/7.1.13.53452.html
+++ b/7.1.13.53452.html
@@ -105,6 +105,7 @@
             <p><a href="https://feedback.secondlife.com/bug-reports/p/fxaa-smaa-severe-performance-issue-mac-m2" target="_blank">Antialiasing slowing down on macOS fix</a></p>
             <p><a href="https://feedback.secondlife.com/bug-reports/p/202503-viewer-shows-dark-pbr-objects-macbook-m4-pro" target="_blank">Low presets making things dark on macOS fix</a></p>
             <p>Fedora package built on 42</p>
+            <p><a href="https://megapahit.com/show_bug.cgi?id=42" target="_blank">Fedora build can start in Wayland session</a></p>
             <p><a href="https://megapahit.com/show_bug.cgi?id=167" target="_blank">Successful native macOS arm64 login in Japanese</a></p>
         </div>
         <script type="text/javascript" src="js/emscripten.js"></script>
