--- a/7.1.13.53713.html
+++ b/7.1.13.53713.html
@@ -50,18 +50,35 @@
                         </li>
                         <li>
                             <details>
-                                <summary>7.1.13.53691 - 2025.05</summary>
+                                <summary>7.1.14.53615 - 2025.04</summary>
                                 <ul>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13-53691-x86_64.pkg.tar.zst">Arch</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53691-Debian.deb">Debian 12.10</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53691-Fedora-aarch64.rpm">Fedora 42 aarch64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53691-Fedora-x86_64.rpm">Fedora 42 x86-64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53691-FreeBSD.pkg">FreeBSD 14.2</a></li>
-                                    <li><a href="https://megapahit.net/gentoo/games-rpg/megapahit/megapahit-7.1.13-r53691-1.gpkg.tar">Gentoo</a></li>
-                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.13.53691-arm64.dmg">macOS arm64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.13.53691-x86_64.dmg">macOS x86-64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53691-Tumbleweed.rpm">openSUSE Tumbleweed</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53691-Ubuntu.deb">Ubuntu 24.04.2</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14-53615-x86_64.pkg.tar.zst">Arch</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53615-Debian.deb">Debian 12.10</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53615-Fedora-aarch64.rpm">Fedora 42 aarch64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53615-Fedora-x86_64.rpm">Fedora 42 x86-64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53615-FreeBSD.pkg">FreeBSD 14.2</a></li>
+                                    <li><a href="https://megapahit.net/gentoo/games-rpg/megapahit/megapahit-7.1.14-r53615-1.gpkg.tar">Gentoo</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.14.53615-arm64.dmg">macOS arm64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.14.53615-x86_64.dmg">macOS x86-64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53615-Tumbleweed.rpm">openSUSE Tumbleweed</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53615-Ubuntu.deb">Ubuntu 24.04.2</a></li>
+                                </ul>
+                            </details>
+                        </li>
+                        <li>
+                            <details>
+                                <summary>7.1.13.53713 - 2025.05</summary>
+                                <ul>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13-53713-x86_64.pkg.tar.zst">Arch</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53713-Debian.deb">Debian 12.10</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53713-Fedora-aarch64.rpm">Fedora 42 aarch64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53713-Fedora-x86_64.rpm">Fedora 42 x86-64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53713-FreeBSD.pkg">FreeBSD 14.2</a></li>
+                                    <li><a href="https://megapahit.net/gentoo/games-rpg/megapahit/megapahit-7.1.13-r53713-1.gpkg.tar">Gentoo</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.13.53713-arm64.dmg">macOS arm64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.13.53713-x86_64.dmg">macOS x86-64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53713-Tumbleweed.rpm">openSUSE Tumbleweed</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53713-Ubuntu.deb">Ubuntu 24.04.2</a></li>
                                 </ul>
                             </details>
                         </li>
@@ -78,7 +95,8 @@
                     <h2>Changelogs</h2>
                     <ul>
                         <li><a id="7.1.13.53452" href="7.1.13.53452.html">7.1.13.53452 - Default</a></li>
-                        <li><a id="7.1.13.53691" href="7.1.13.53691.html">7.1.13.53691 - 2025.05</a></li>
+                        <li><a id="7.1.14.53615" href="7.1.14.53615.html">7.1.14.53615 - 2025.04</a></li>
+                        <li><a id="7.1.13.53713" href="7.1.13.53713.html">7.1.13.53713 - 2025.05</a></li>
                     </ul>
                 </div>
             </div>
@@ -115,10 +133,11 @@
                 });
         </script>
         <div id="canvas" style="text-align: center;">
-            <h2>Changelog (22nd of April 2025)</h2>
-            <p><a href="https://github.com/secondlife/viewer/releases/tag/Second_Life_Release%2311cd9b9-2025.05" target="_blank">Parity with 2025.05</a></p>
-            <p><a href="https://megapahit.net/downloads/megapahit-7.1.13.53691-Fedora-aarch64.rpm" target="_blank">New port: Fedora 42 aarch64 (built on Asahi Remix)</a></p>
+            <h2>Changelog (3rd of May 2025)</h2>
+            <p><a href="https://github.com/secondlife/viewer/releases/tag/Second_Life_Release%23ec6c988-2025.05" target="_blank">Parity with 2025.05</a></p>
+            <p><a href="https://megapahit.net/downloads/megapahit-7.1.13.53713-Fedora-aarch64.rpm" target="_blank">New port: Fedora 42 aarch64 (built on Asahi Remix)</a></p>
             <p>Gentoo build now has NDOF enabled too</p>
+            <p>Updated Boost (to 1.88) and libxml2 linkages on Arch</p>
         </div>
         <script type="text/javascript" src="js/emscripten.js"></script>
         <script async type="text/javascript" src="js/myron.js"></script>
