--- a/7.1.14.53684.html
+++ b/7.1.14.53684.html
@@ -50,18 +50,18 @@
                         </li>
                         <li>
                             <details>
-                                <summary>7.1.14.53676 - 2025.04</summary>
+                                <summary>7.1.14.53684 - 2025.04</summary>
                                 <ul>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14-53676-x86_64.pkg.tar.zst">Arch</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53676-Debian.deb">Debian 12.11</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53676-Fedora-aarch64.rpm">Fedora 42 aarch64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53676-Fedora-x86_64.rpm">Fedora 42 x86-64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53676-FreeBSD.pkg">FreeBSD 14.2</a></li>
-                                    <li><a href="https://megapahit.net/gentoo/games-rpg/megapahit/megapahit-7.1.14-r53676-1.gpkg.tar">Gentoo</a></li>
-                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.14.53676-arm64.dmg">macOS arm64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.14.53676-x86_64.dmg">macOS x86-64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53676-Tumbleweed.rpm">openSUSE Tumbleweed</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53676-Ubuntu.deb">Ubuntu 24.04.2</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14-53684-x86_64.pkg.tar.zst">Arch</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53684-Debian.deb">Debian 12.11</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53684-Fedora-aarch64.rpm">Fedora 42 aarch64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53684-Fedora-x86_64.rpm">Fedora 42 x86-64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53684-FreeBSD.pkg">FreeBSD 14.2</a></li>
+                                    <li><a href="https://megapahit.net/gentoo/games-rpg/megapahit/megapahit-7.1.14-r53684-1.gpkg.tar">Gentoo</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.14.53684-arm64.dmg">macOS arm64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.14.53684-x86_64.dmg">macOS x86-64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53684-Tumbleweed.rpm">openSUSE Tumbleweed</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53684-Ubuntu.deb">Ubuntu 24.04.2</a></li>
                                 </ul>
                             </details>
                         </li>
@@ -78,7 +78,7 @@
                     <h2>Changelogs</h2>
                     <ul>
                         <li><a id="7.1.13.53452" href="7.1.13.53452.html">7.1.13.53452 - Default</a></li>
-                        <li><a id="7.1.14.53676" href="7.1.14.53676.html">7.1.14.53676 - 2025.04</a></li>
+                        <li><a id="7.1.14.53684" href="7.1.14.53684.html">7.1.14.53684 - 2025.04</a></li>
                     </ul>
                 </div>
             </div>
@@ -115,9 +115,9 @@
                 });
         </script>
         <div id="canvas" style="text-align: center;">
-            <h2>Changelog (22nd of May 2025)</h2>
-            <p><a href="https://github.com/secondlife/viewer/releases/tag/Second_Life_Release%23a31b7ae2-Second_Life_Release%23a31b7ae-2025.04" target="_blank">Parity with 2025.04</a></p>
-            <p><a href="https://megapahit.net/downloads/megapahit-7.1.14.53676-Fedora-aarch64.rpm" target="_blank">New port: Fedora 42 aarch64 (built on Asahi Remix)</a></p>
+            <h2>Changelog (24th of May 2025)</h2>
+            <p><a href="https://releasenotes.secondlife.com/viewer/7.1.14.15192634334.html" target="_blank">Parity with 2025.04</a></p>
+            <p><a href="https://megapahit.net/downloads/megapahit-7.1.14.53684-Fedora-aarch64.rpm" target="_blank">New port: Fedora 42 aarch64 (built on Asahi Remix)</a></p>
             <p>Gentoo build now has NDOF enabled too</p>
             <p>Updated Boost (to 1.88) and libxml2 linkages on Arch</p>
             <p>Upgrade OpenJPEG to 2.5.3, and most use system library</p>
