Promote 7.1.14.53684 to Default
with the fixed Fedora x86-64 package sneaked in.

--- a/7.1.14.53684.html
+++ b/7.1.14.53684.html
@@ -34,23 +34,7 @@
                     <ul>
                         <li>
                             <details>
-                                <summary>7.1.13.53452 - Default</summary>
-                                <ul>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13-53452-x86_64.pkg.tar.zst">Arch</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53452-Debian.deb">Debian 12.10</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53452-Fedora.rpm">Fedora 42</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53452-FreeBSD.pkg">FreeBSD 14.2</a></li>
-                                    <li><a href="https://megapahit.net/gentoo/games-rpg/megapahit/megapahit-7.1.13-r53452-1.gpkg.tar">Gentoo</a></li>
-                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.13.53452-arm64.dmg">macOS arm64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.13.53452-x86_64.dmg">macOS x86-64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53452-Tumbleweed.rpm">openSUSE Tumbleweed</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.13.53452-Ubuntu.deb">Ubuntu 24.04.2</a></li>
-                                </ul>
-                            </details>
-                        </li>
-                        <li>
-                            <details>
-                                <summary>7.1.14.53684 - 2025.04</summary>
+                                <summary>7.1.14.53684 - Default</summary>
                                 <ul>
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.1.14-53684-x86_64.pkg.tar.zst">Arch</a></li>
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53684-Debian.deb">Debian 12.11</a></li>
@@ -77,8 +61,7 @@
                     </ul>
                     <h2>Changelogs</h2>
                     <ul>
-                        <li><a id="7.1.13.53452" href="7.1.13.53452.html">7.1.13.53452 - Default</a></li>
-                        <li><a id="7.1.14.53684" href="7.1.14.53684.html">7.1.14.53684 - 2025.04</a></li>
+                        <li><a id="7.1.14.53684" href="7.1.14.53684.html">7.1.14.53684 - Default</a></li>
                     </ul>
                 </div>
             </div>
@@ -115,13 +98,14 @@
                 });
         </script>
         <div id="canvas" style="text-align: center;">
-            <h2>Changelog (24th of May 2025)</h2>
+            <h2>Changelog (28th of May 2025)</h2>
             <p><a href="https://releasenotes.secondlife.com/viewer/7.1.14.15192634334.html" target="_blank">Parity with 2025.04</a></p>
             <p><a href="https://megapahit.net/downloads/megapahit-7.1.14.53684-Fedora-aarch64.rpm" target="_blank">New port: Fedora 42 aarch64 (built on Asahi Remix)</a></p>
             <p>Gentoo build now has NDOF enabled too</p>
             <p>Updated Boost (to 1.88) and libxml2 linkages on Arch</p>
             <p>Upgrade OpenJPEG to 2.5.3, and most use system library</p>
             <p>Debian package built on 12.11</p>
+            <p><a href="https://megapahit.com/show_bug.cgi?id=42" target="_blank">A fix to the Fedora x86-64 crash at launch</a></p>
         </div>
         <script type="text/javascript" src="js/emscripten.js"></script>
         <script async type="text/javascript" src="js/myron.js"></script>
