Promote 7.1.15.53776 to Default

--- a/7.1.15.53776.html
+++ b/7.1.15.53776.html
@@ -99,9 +99,9 @@
                 });
         </script>
         <div id="canvas" style="text-align: center;">
-            <h2>Changelog (12th of June 2025)</h2>
+            <h2>Changelog (13th of June 2025)</h2>
             <p><a href="https://releasenotes.secondlife.com/viewer/7.1.15.15596336374.html" target="_blank">Parity with SLv 2025.04.01</a></p>
-            <p>Updated Boost (to 1.88) linkages on FreeBSD</p>
+            <p>Updated Boost (to 1.88) linkages on FreeBSD and Tumbleweed</p>
             <p>FreeBSD package built on 14.3</p>
             <p><a href="https://megapahit.com/show_bug.cgi?id=59" target="_blank">New port: Windows</a></p>
         </div>
