--- a/7.1.15.53909.html
+++ b/7.1.15.53909.html
@@ -34,18 +34,19 @@
                     <ul>
                         <li>
                             <details>
-                                <summary>7.1.14.53684 - Default</summary>
+                                <summary>7.1.15.53776 - Default</summary>
                                 <ul>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14-53684-x86_64.pkg.tar.zst">Arch</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53684-Debian.deb">Debian 12.11</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53684-Fedora-aarch64.rpm">Fedora 42 aarch64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53684-Fedora-x86_64.rpm">Fedora 42 x86-64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53684-FreeBSD.pkg">FreeBSD 14.2</a></li>
-                                    <li><a href="https://megapahit.net/gentoo/games-rpg/megapahit/megapahit-7.1.14-r53684-1.gpkg.tar">Gentoo</a></li>
-                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.14.53684-arm64.dmg">macOS arm64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.14.53684-x86_64.dmg">macOS x86-64</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53684-Tumbleweed.rpm">openSUSE Tumbleweed</a></li>
-                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.14.53684-Ubuntu.deb">Ubuntu 24.04.2</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.15-53776-x86_64.pkg.tar.zst">Arch</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.15.53776-Debian.deb">Debian 12.11</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.15.53776-Fedora-aarch64.rpm">Fedora 42 aarch64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.15.53776-Fedora-x86_64.rpm">Fedora 42 x86-64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.15.53776-FreeBSD.pkg">FreeBSD 14.3</a></li>
+                                    <li><a href="https://megapahit.net/gentoo/games-rpg/megapahit/megapahit-7.1.15-r53776-1.gpkg.tar">Gentoo</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.15.53776-arm64.dmg">macOS arm64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.15.53776-x86_64.dmg">macOS x86-64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.15.53776-Tumbleweed.rpm">openSUSE Tumbleweed</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.1.15.53776-Ubuntu.deb">Ubuntu 24.04.2</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.1.15.53776-win64.exe">Windows</a></li>
                                 </ul>
                             </details>
                         </li>
@@ -78,7 +79,7 @@
                     </ul>
                     <h2>Changelogs</h2>
                     <ul>
-                        <li><a id="7.1.14.53684" href="7.1.14.53684.html">7.1.14.53684 - Default</a></li>
+                        <li><a id="7.1.15.53776" href="7.1.15.53776.html">7.1.15.53776 - Default</a></li>
                         <li><a id="7.1.15.53909" href="7.1.15.53909.html">7.1.15.53909 - 2025.05</a></li>
                     </ul>
                 </div>
