--- a/7.1.15.53776.html
+++ b/7.1.15.53776.html
@@ -52,6 +52,25 @@
                         </li>
                         <li>
                             <details>
+                                <summary>7.2.0.54038 - glTF Mesh Import</summary>
+                                <ul>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.2.0-54038-x86_64.pkg.tar.zst">Arch</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.2.0.54038-Debian.deb">Debian 12.11</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.2.0.54038-Fedora-aarch64.rpm">Fedora 42 aarch64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.2.0.54038-Fedora-x86_64.rpm">Fedora 42 x86-64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.2.0.54038-FreeBSD.pkg">FreeBSD 14.3</a></li>
+                                    <li><a href="https://megapahit.net/gentoo/games-rpg/megapahit/megapahit-7.2.0-r54038-1.gpkg.tar">Gentoo</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.2.0.54038-arm64.dmg">macOS arm64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.2.0.54038-x86_64.dmg">macOS x86-64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.2.0.54038-Tumbleweed.rpm">openSUSE Tumbleweed</a></li>
+                                    <li><a href="https://megapahit.net/downloads/megapahit-7.2.0.54038-Ubuntu.deb">Ubuntu 24.04.2</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.2.0.54038-arm64.exe">Windows arm64</a></li>
+                                    <li><a href="https://megapahit.net/downloads/Megapahit-7.2.0.54038-x64.exe">Windows x64</a></li>
+                                </ul>
+                            </details>
+                        </li>
+                        <li>
+                            <details>
                                 <summary>Source Code</summary>
                                 <ul>
                                     <li><a href="https://megapahit.org" target="_blank">Self-hosted</a></li>
@@ -63,6 +82,7 @@
                     <h2>Changelogs</h2>
                     <ul>
                         <li><a id="7.1.15.53776" href="7.1.15.53776.html">7.1.15.53776 - Default</a></li>
+                        <li><a id="7.2.0.54038" href="7.2.0.54038.html">7.2.0.54038 - glTF Mesh Import</a></li>
                     </ul>
                 </div>
             </div>
