--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         </li>
                         <li>
                             <details>
-                                <summary>7.2.0.54038 - Default</summary>
+                                <summary>7.2.0.54038 - glTF Mesh Import</summary>
                                 <ul>
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.2.0-54038-x86_64.pkg.tar.zst">Arch</a></li>
                                     <li><a href="https://megapahit.net/downloads/megapahit-7.2.0.54038-Debian.deb">Debian 12.11</a></li>
