Add Fedora version upgrade to 54844 change log

--- a/7.2.3.54844.html
+++ b/7.2.3.54844.html
@@ -124,6 +124,7 @@
         <div id="canvas" style="text-align: center;">
             <h2>Changelog (8th of November 2025)</h2>
             <p><a href="https://releasenotes.secondlife.com/viewer/7.2.3.19118091373.html" target="_blank">Parity with SLv 2025.08</a></p>
+            <p>Fedora packages are built on Fedora 43 now</p>
         </div>
         <script type="text/javascript" src="js/emscripten.js"></script>
         <script async type="text/javascript" src="js/myron.js"></script>
